2025-09 Cumulative Update for Version 5.0 (5.1.5)

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                         <img src="https://i.imgur.com/rBAx6Yy.png" alt>
                         <div class="hover-content-blog">
                             <h4>EICW - Implementation Brainstorming</h4>
-                            <a class="info" href="worksbynrfz/improve-wf.html" class="portfolio-img"><i
+                            <a class="info" href="eicw/eicw.html" class="portfolio-img"><i
                                     class="fa-solid fa-arrow-right"></i></a>
                         </div>
                     </div>
@@ -148,7 +148,7 @@
                         <img src="https://i.imgur.com/tKQajl6.png" alt="tdc-v3">
                         <div class="hover-content-blog">
                             <h4>Train Delays Tracker</h4>
-                            <a class="info" href="worksbynrfz/delays-checker.html" class="portfolio-img"><i
+                            <a class="info" href="https://nurafianzulkifli.github.io/train-delays-checker/" class="portfolio-img"><i
                                     class="fa-solid fa-arrow-right"></i></a>
                         </div>
                     </div>
