2025-09 Cumulative Update for Version 5.0 (5.1.6)
EOL

--- a/eicw/eicw-4.html
+++ b/eicw/eicw-4.html
@@ -387,6 +387,9 @@
           <p>&copy;
             <script>document.write(new Date().getFullYear());</script> Nurafian Zulkifli
           </p>
+          <p><strong>Preview the new Design
+              <a href="https://nurafianzulkifli.github.io/nrfz-dev/">here!</a></strong>
+          </p>
         </div>
       </div>
     </div>
