--- a/worksbynrfz/ffl.html
+++ b/worksbynrfz/ffl.html
@@ -177,6 +177,9 @@
           <p>&copy;
             <script>document.write(new Date().getFullYear());</script> Nurafian Zulkifli
           </p>
+          <p><strong>Preview the new Design
+              <a href="https://nurafianzulkifli.github.io/nrfz-dev/">here!</a></strong>
+          </p>
         </div>
       </div>
     </div>
