2025-11 Feature Update for Version 2511 (6.0.0)

--- a/worksbynrfz/delays-checker.html
+++ b/worksbynrfz/delays-checker.html
@@ -38,7 +38,7 @@
 
 <style>
   #cv-tdc {
-    background-image: url('https://i.imgur.com/HTSYQUa.png');
+    background-image: url('https://i.imgur.com/ffwxhba.png');
     height: 75vh;
   }
 </style>
@@ -306,18 +306,18 @@
   <div class="wrapper">
     <div class="carousel" id="delays-carousel">
       <div class="carousel-cell">
-        <a href="https://i.imgur.com/XPq0mvF.png" class="portfolio-img" data-gallery="carousel" id="tdt1">
-          <img class="img-fluid" src="https://i.imgur.com/XPq0mvF.png" alt="tdt1-img" draggable="false" id="tdt1-img">
+        <a href="https://i.imgur.com/hmYKkAS.png" class="portfolio-img" data-gallery="carousel" id="tdt1">
+          <img class="img-fluid" src="https://i.imgur.com/hmYKkAS.png" alt="tdt1-img" draggable="false" id="tdt1-img">
         </a>
       </div>
       <div class="carousel-cell">
-        <a href="https://i.imgur.com/JqT4T3I.png" class="portfolio-img" data-gallery="carousel" id="tdt2">
-          <img class="img-fluid" src="https://i.imgur.com/JqT4T3I.png" alt="tdt2-img" draggable="false" id="tdt2-img">
+        <a href="https://i.imgur.com/HVLfvR0.png" class="portfolio-img" data-gallery="carousel" id="tdt2">
+          <img class="img-fluid" src="https://i.imgur.com/HVLfvR0.png" alt="tdt2-img" draggable="false" id="tdt2-img">
         </a>
       </div>
       <div class="carousel-cell">
-        <a href="https://i.imgur.com/xKLVJbC.png" class="portfolio-img" data-gallery="carousel" id="tdt3">
-          <img class="img-fluid" src="https://i.imgur.com/xKLVJbC.png" alt="tdt3-img" draggable="false" id="tdt3-img">
+        <a href="https://i.imgur.com/8pfBM4C.png" class="portfolio-img" data-gallery="carousel" id="tdt3">
+          <img class="img-fluid" src="https://i.imgur.com/8pfBM4C.png" alt="tdt3-img" draggable="false" id="tdt3-img">
         </a>
       </div>
     </div>
@@ -471,30 +471,30 @@
 
       if (isDarkMode) {
         /* Banners */
-        tdcPage.style.backgroundImage = "url('https://i.imgur.com/HTSYQUa.png')";
+        tdcPage.style.backgroundImage = "url('https://i.imgur.com/ffwxhba.png')";
 
-        tdt1_link.href = 'https://i.imgur.com/FpOufoV.png';
-        tdt1_img.src = 'https://i.imgur.com/FpOufoV.png';
+        tdt1_link.href = 'https://i.imgur.com/X8jzLkz.png';
+        tdt1_img.src = 'https://i.imgur.com/X8jzLkz.png';
 
-        tdt2_link.href = 'https://i.imgur.com/UwMCmXE.png';
-        tdt2_img.src = 'https://i.imgur.com/UwMCmXE.png';
+        tdt2_link.href = 'https://i.imgur.com/wB1HaLg.png';
+        tdt2_img.src = 'https://i.imgur.com/wB1HaLg.png';
 
-        tdt3_link.href = 'https://i.imgur.com/eX0NhWw.png';
-        tdt3_img.src = 'https://i.imgur.com/eX0NhWw.png';
+        tdt3_link.href = 'https://i.imgur.com/ypd3eta.png';
+        tdt3_img.src = 'https://i.imgur.com/ypd3eta.png';
 
 
       } else {
         /* Banners */
-        tdcPage.style.backgroundImage = "url('https://i.imgur.com/HTSYQUa.png')";
+        tdcPage.style.backgroundImage = "url('https://i.imgur.com/ffwxhba.png')";
 
-        tdt1_link.href = 'https://i.imgur.com/XPq0mvF.png';
-        tdt1_img.src = 'https://i.imgur.com/XPq0mvF.png';
+        tdt1_link.href = 'https://i.imgur.com/hmYKkAS.png';
+        tdt1_img.src = 'https://i.imgur.com/hmYKkAS.png';
 
-        tdt2_link.href = 'https://i.imgur.com/JqT4T3I.png';
-        tdt2_img.src = 'https://i.imgur.com/JqT4T3I.png';
+        tdt2_link.href = 'https://i.imgur.com/HVLfvR0.png';
+        tdt2_img.src = 'https://i.imgur.com/HVLfvR0.png';
 
-        tdt3_link.href = 'https://i.imgur.com/xKLVJbC.png';
-        tdt3_img.src = 'https://i.imgur.com/xKLVJbC.png';
+        tdt3_link.href = 'https://i.imgur.com/8pfBM4C.png';
+        tdt3_img.src = 'https://i.imgur.com/8pfBM4C.png';
 
       }
     }
