--- a/works-by-nrfz.html
+++ b/works-by-nrfz.html
@@ -289,7 +289,7 @@
 
             <div class="col-12 col-sm-6 col-lg-3 single_gallery_item in mb-30 " data-year="2024">
               <div class="single-portfolio-content">
-                <img src="https://i.imgur.com/6js4RYj.png" alt="tdc-v3">
+                <img src="https://i.imgur.com/Dlkjslp.png" alt="tdc-v3">
                 <div class="hover-content-blog">
                   <h4>Train Delays Tracker</h4>
                   <a class="info" href="worksbynrfz/delays-checker.html" class="portfolio-img"><i
