2025-11 Feature Update for Version 2511 (6.0.0)

--- a/eicw/eicw-4.html
+++ b/eicw/eicw-4.html
@@ -250,7 +250,8 @@
               <!-- Preface -->
               <div class="col-lg-12 wow fadeIn" data-wow-delay="100ms">
                 <div class="info justify-content-center">
-                  <h2 class="text-center" style="font-size: 30px; font-weight:bold; text-align: left; padding-top: 1em;">Proposed UI/UX
+                  <h2 class="text-center"
+                    style="font-size: 30px; font-weight:bold; text-align: left; padding-top: 1em;">Proposed UI/UX
                     Changes</h2>
                   <p style="text-align: left;">In aligning with the current Wayfinding System, I have incorporated the
                     elements of simplicity, clarity, and consistency. The designs aim to ensure that users can easily
@@ -260,7 +261,8 @@
                   </p>
                 </div>
               </div>
-              <div class="portfolio-filter portfolio-filter-sub mt-3 wow fadeIn" data-wow-delay="100ms" style="padding-bottom: 2em;">
+              <div class="portfolio-filter portfolio-filter-sub mt-3 wow fadeIn" data-wow-delay="100ms"
+                style="padding-bottom: 2em;">
                 <a href="#bcr">
                   <button class="btn">Bus Card Reader UI (LTA)</button>
                 </a>
@@ -272,6 +274,9 @@
                 </a>
                 <a href="#staris2">
                   <button class="btn">STARiS 2.0 (SMRT)</button>
+                </a>
+                <a href="#cddbp">
+                  <button class="btn">Car Door Display (BPLRT)</button>
                 </a>
               </div>
             </div>
@@ -454,17 +459,39 @@
                   </a>
                 </div>
 
-                <video id="eicw-vid3" controls controlsList="nodownload" oncontextmenu="return false;" width="100%"
-                  class="column-vid">
-                  <source src="img/staris2-red.mp4" type="video/mp4">
-                  Your browser does not support the video tag.
-                </video>
-
-                <!-- <iframe width="1280" height="768" src="https://www.youtube.com/embed/Zl0TNsjguvs?si=_193tDT6TsT1OBMc"
+                <iframe width="1280" height="512" src="https://www.youtube.com/embed/dQoxy7rBRAU?si=-Ko9xKEyeDRb1Kni"
                   title="YouTube video player" frameborder="0"
                   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                   referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-              </div> -->
+              </div>
+              </div>
+            </div>
+          </div>
+
+          <hr>
+
+          <!-- Car Door Display (BPLRT) -->
+          <div class="col-lg-12 wow fadeIn" data-wow-delay="100ms">
+            <div class="info justify-content-center">
+
+              <h2 class="text-center" style="font-size: 30px; font-weight: bold; margin-top: 1em;" id="cddbp">Car Door Display (BPLRT)
+              </h2>
+              <p style="text-align: left;"> For the LCD screens on the KSFB/C (C151B/C) trains, I have redesigned it to
+                look
+                exactly like the other counterparts on the NSL, EWL, NEL and CCL. The current UI is <i>waaay</i> too
+                dated.</p>
+
+                <div class="banner-eicw">
+                  <a href="img/lcd3-light.png" id="lcd3" class="portfolio-img">
+                    <img src="img/lcd3-light.png" id="lcd3-img" class="img-fluid" alt="lcd3">
+                  </a>
+                </div>
+
+                <iframe width="1280" height="512" src="https://www.youtube.com/embed/5aDZRqKOu2g?si=xkjiFZxgPlGVkNYi"
+                  title="YouTube video player" frameborder="0"
+                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                  referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+              </div>
               </div>
             </div>
           </div>
