2025-11 Feature Update for Version 2511 (6.0.0)

--- a/eicw/eicw-4.html
+++ b/eicw/eicw-4.html
@@ -482,8 +482,8 @@
                 dated.</p>
 
                 <div class="banner-eicw">
-                  <a href="img/lcd3-light.png" id="lcd3" class="portfolio-img">
-                    <img src="img/lcd3-light.png" id="lcd3-img" class="img-fluid" alt="lcd3">
+                  <a href="img-2/cddbp-light.png" id="cddbp" class="portfolio-img">
+                    <img src="img-2/cddbp-light.png" id="cddbp-img" class="img-fluid" alt="cddbp">
                   </a>
                 </div>
 
