2025-11 Feature Update for Version 2511 (6.0.0)

--- a/eicw/eicw-4.html
+++ b/eicw/eicw-4.html
@@ -464,38 +464,39 @@
                   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                   referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
               </div>
-              </div>
-            </div>
-          </div>
-
-          <hr>
-
-          <!-- Car Door Display (BPLRT) -->
-          <div class="col-lg-12 wow fadeIn" data-wow-delay="100ms">
-            <div class="info justify-content-center">
-
-              <h2 class="text-center" style="font-size: 30px; font-weight: bold; margin-top: 1em;" id="cddbp">Car Door Display (BPLRT)
-              </h2>
-              <p style="text-align: left;"> For the LCD screens on the KSFB/C (C151B/C) trains, I have redesigned it to
-                look
-                exactly like the other counterparts on the NSL, EWL, NEL and CCL. The current UI is <i>waaay</i> too
-                dated.</p>
-
-                <div class="banner-eicw">
-                  <a href="img-2/cddbp-light.png" id="cddbp" class="portfolio-img">
-                    <img src="img-2/cddbp-light.png" id="cddbp-img" class="img-fluid" alt="cddbp">
-                  </a>
-                </div>
-
-                <iframe width="1280" height="512" src="https://www.youtube.com/embed/5aDZRqKOu2g?si=xkjiFZxgPlGVkNYi"
-                  title="YouTube video player" frameborder="0"
-                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                  referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-              </div>
-              </div>
             </div>
           </div>
         </div>
+
+        <hr>
+
+        <!-- Car Door Display (BPLRT) -->
+        <div class="col-lg-12 wow fadeIn" data-wow-delay="100ms">
+          <div class="info justify-content-center">
+
+            <h2 class="text-center" style="font-size: 30px; font-weight: bold; margin-top: 1em;" id="cddbp">Car Door
+              Display (BPLRT)
+            </h2>
+            <p style="text-align: left;"> For the LCD screens on the new C801B trains, I have redesigned it to
+              look
+              exactly like the other counterparts on the NSL, EWL, NEL and CCL. The current UI works I guess, but it's
+              starting to look old, and the design does not match current design standards.</p>
+
+            <div class="banner-eicw">
+              <a href="img-2/cddbp-light.png" id="cddbp" class="portfolio-img">
+                <img src="img-2/cddbp-light.png" id="cddbp-img" class="img-fluid" alt="cddbp">
+              </a>
+            </div>
+
+            <iframe width="1280" height="512" src="https://www.youtube.com/embed/5aDZRqKOu2g?si=xkjiFZxgPlGVkNYi"
+              title="YouTube video player" frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+          </div>
+        </div>
+      </div>
+    </div>
+    </div>
   </section>
 
   <!-- Footer -->
