--- a/eicw/eicw-4.html
+++ b/eicw/eicw-4.html
@@ -482,6 +482,18 @@
               exactly like the other counterparts on the NSL, EWL, NEL and CCL. The current UI works I guess, but it's
               starting to look old, and the design does not match current design standards.</p>
 
+            <div class="row">
+              <div class="column column-pic">
+                <figcaption>
+                  <a href="img-2/cddbpori.png" id="cddbpori" class="portfolio-img ">
+                    <img src="img-2/cddbpori.png" id="cddbpori-img" class="img-fluid cp-img" alt="cddbpori">
+                  </a>
+                  <p style="text-align: center;">Current CDD UI Design on the C801B Trains.
+                  </p>
+                </figcaption>
+              </div>
+            </div>
+
             <div class="banner-eicw">
               <a href="img-2/cddbp-light.png" id="cddbp" class="portfolio-img">
                 <img src="img-2/cddbp-light.png" id="cddbp-img" class="img-fluid" alt="cddbp">
