2025-11 Feature Update for Version 2511 (6.0.0)

--- a/eicw/eicw-4.html
+++ b/eicw/eicw-4.html
@@ -465,6 +465,7 @@
                   referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
               </div>
             </div>
+
           </div>
         </div>
 
@@ -492,22 +493,23 @@
                   </p>
                 </figcaption>
               </div>
-            </div>
 
-            <div class="banner-eicw">
-              <a href="img-2/cddbp-light.png" id="cddbp" class="portfolio-img">
-                <img src="img-2/cddbp-light.png" id="cddbp-img" class="img-fluid" alt="cddbp">
-              </a>
-            </div>
 
-            <iframe width="1280" height="512" src="https://www.youtube.com/embed/5aDZRqKOu2g?si=xkjiFZxgPlGVkNYi"
-              title="YouTube video player" frameborder="0"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-              referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+              <div class="banner-eicw">
+                <a href="img-2/cddbp-light.png" id="cddbp-lcd" class="portfolio-img">
+                  <img src="img-2/cddbp-light.png" id="cddbp-lcd-img" class="img-fluid" alt="cddbp">
+                </a>
+              </div>
+
+              <iframe width="1280" height="512" src="https://www.youtube.com/embed/5aDZRqKOu2g?si=xkjiFZxgPlGVkNYi"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
           </div>
+
         </div>
       </div>
-    </div>
     </div>
   </section>
 
