2025-11 Cumulative Update for Version 2511 (6.0.1)

--- a/eicw/eicw-4.html
+++ b/eicw/eicw-4.html
@@ -301,13 +301,13 @@
                 Reader UI (LTA)
               </h2>
               </h2>
-              <p style="text-align: left;">The current Bus Card Readers are getting replaced! As such, I have come up
+              <p style="text-align: justify;">The current Bus Card Readers are getting replaced! As such, I have come up
                 with a design whereby the Interface match the ones used on the MRT systems, particularly the NSEWL and
                 CCL. For those MRT lines, they too, are getting their faregates replaced. As we can see, we're
                 progressively going for a more full-screen approach, where you will tap your card on the screen itself.
               </p>
 
-              <p style="text-align: left;">While the User Interface for the upcoming Card Readers are not yet known,
+              <p style="text-align: justify;">While the User Interface for the upcoming Card Readers are not yet known,
                 these are what I envisioned the designs to be!</p>
 
               <div class="row">
@@ -359,7 +359,7 @@
               <h2 class="text-center" style="font-size: 30px; font-weight: bold; margin-top: 1em;" id="bat">Bus Arrival
                 Timings (LTA)
               </h2>
-              <p style="text-align: left;">The new panels are an improved version with vibrant graphics and bigger
+              <p style="text-align: justify;">The new panels are an improved version with vibrant graphics and bigger
                 fonts and provide information that allows commuters to better plan their journeys. I have redesigned it
                 to match the current design system standards.</p>
 
@@ -380,7 +380,7 @@
               <h2 class="text-center" style="font-size: 30px; font-weight: bold; margin-top: 1em;" id="tv">TrainVision
                 (TEL)
               </h2>
-              <p style="text-align: center;"> For the LCD screens on the TEL trains, I have redesigned it to look
+              <p style="text-align: justify;"> For the LCD screens on the TEL trains, I have redesigned it to look
                 exactly
                 like the other counterparts on the NSL, EWL, NEL and CCL.</p>
 
@@ -401,7 +401,7 @@
               <h2 class="text-center" style="font-size: 30px; font-weight: bold; margin-top: 1em;" id="staris2">STARiS
                 2.0 (SMRT)
               </h2>
-              <p style="text-align: left;"> For the LCD screens on the KSFB/C (C151B/C) trains, I have redesigned it to
+              <p style="text-align: justify;"> For the LCD screens on the KSFB/C (C151B/C) trains, I have redesigned it to
                 look
                 exactly like the other counterparts on the NSL, EWL, NEL and CCL. The current UI is <i>waaay</i> too
                 dated.</p>
@@ -465,47 +465,47 @@
                   referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
               </div>
             </div>
-
           </div>
-        </div>
 
-        <hr>
+          <hr>
 
-        <!-- Car Door Display (BPLRT) -->
-        <div class="col-lg-12 wow fadeIn" data-wow-delay="100ms">
-          <div class="info justify-content-center">
+          <!-- Car Door Display (BPLRT) -->
+          <div class="col-lg-12 wow fadeIn" data-wow-delay="100ms">
+            <div class="info justify-content-center">
 
-            <h2 class="text-center" style="font-size: 30px; font-weight: bold; margin-top: 1em;" id="cddbp">Car Door
-              Display (BPLRT)
-            </h2>
-            <p style="text-align: left;"> For the LCD screens on the new C801B trains, I have redesigned it to
-              look
-              exactly like the other counterparts on the NSL, EWL, NEL and CCL. The current UI works I guess, but it's
-              starting to look old, and the design does not match current design standards.</p>
+              <h2 class="text-center" style="font-size: 30px; font-weight: bold; margin-top: 1em;" id="cddbp">Car Door
+                Display (BPLRT)
+              </h2>
+              <p style="text-align: justify;"> For the LCD screens on the new C801B trains, I have redesigned it to
+                look
+                exactly like the other counterparts on the NSL, EWL, NEL and CCL. The current UI works I guess, but it's
+                starting to look old, and the design does not match current design standards.</p>
 
-            <div class="row">
-              <div class="column column-pic">
-                <figcaption>
-                  <a href="img-2/cddbpori.png" id="cddbpori" class="portfolio-img ">
-                    <img src="img-2/cddbpori.png" id="cddbpori-img" class="img-fluid cp-img" alt="cddbpori">
+              <div class="row">
+                <div class="column column-pic">
+                  <figcaption>
+                    <a href="img-2/cddbpori.png" id="cddbpori" class="portfolio-img ">
+                      <img src="img-2/cddbpori.png" id="cddbpori-img" class="img-fluid cp-img" alt="cddbpori">
+                    </a>
+                    <p style="text-align: center;">Current CDD UI Design on the C801B Trains.
+                    </p>
+                  </figcaption>
+                </div>
+
+
+                <div class="banner-eicw">
+                  <a href="img-2/cddbp-light.png" id="cddbp-lcd" class="portfolio-img">
+                    <img src="img-2/cddbp-light.png" id="cddbp-lcd-img" class="img-fluid" alt="cddbp">
                   </a>
-                  <p style="text-align: center;">Current CDD UI Design on the C801B Trains.
-                  </p>
-                </figcaption>
+                </div>
+
+                <iframe width="1280" height="512" src="https://www.youtube.com/embed/5aDZRqKOu2g?si=xkjiFZxgPlGVkNYi"
+                  title="YouTube video player" frameborder="0"
+                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                  referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
               </div>
-
-
-              <div class="banner-eicw">
-                <a href="img-2/cddbp-light.png" id="cddbp-lcd" class="portfolio-img">
-                  <img src="img-2/cddbp-light.png" id="cddbp-lcd-img" class="img-fluid" alt="cddbp">
-                </a>
-              </div>
-
-              <iframe width="1280" height="512" src="https://www.youtube.com/embed/5aDZRqKOu2g?si=xkjiFZxgPlGVkNYi"
-                title="YouTube video player" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
+
           </div>
 
         </div>
