2025-11 Cumulative Update for Version 2511 (6.0.1)

--- a/worksbynrfz/igra2.html
+++ b/worksbynrfz/igra2.html
@@ -284,12 +284,12 @@
             <div class="row justify-content-center">
               <div class="col-lg-12">
                 <div class="info justify-content-center">
-                  <p style="text-align: center; padding-bottom: 2em;"> A submission for an assignment to produce an
+                  <p style="text-align: justify;"> A submission for an assignment to produce an
                     actual Infographic, based on a given topic.</p>
                 </div>
               </div>
             </div>
-
+            <br>
             <div class="banner text-center wow fadeIn" data-wow-delay="150ms">
               <a href="https://i.imgur.com/lkWD0vn.png" class="portfolio-img"><img src="https://i.imgur.com/lkWD0vn.png"
                   class="img-fluid" alt="cover-page"></a>
