--- a/worksbynrfz/man-a22-masc.html
+++ b/worksbynrfz/man-a22-masc.html
@@ -278,11 +278,12 @@
             <div class="row justify-content-center">
               <div class="col-lg-12">
                 <div class="info justify-content-center">
-                  <p style="text-align: center; padding-bottom: 2em;">This legendary mascot used to be everywhere in the early
-                      2010s. The mascot was used in promoting SMRT's newest bus model, back then, the MAN A22.</p>
+                  <p style="text-align: justify;">This legendary mascot used to be everywhere in the early
+                    2010s. The mascot was used in promoting SMRT's newest bus model, back then, the MAN A22.</p>
                 </div>
               </div>
             </div>
+            <br>
             <div class="banner text-center wow fadeIn" data-wow-delay="150ms">
               <a href="https://i.imgur.com/s1Ir8of.png" class="portfolio-img"><img src="https://i.imgur.com/s1Ir8of.png"
                   class="img-fluid" alt="cover-page"></a>
