--- a/worksbynrfz/bp12.html
+++ b/worksbynrfz/bp12.html
@@ -285,12 +285,13 @@
             <div class="row justify-content-center">
               <div class="col-lg-12">
                 <div class="info justify-content-center">
-                  <p style="text-align: center; padding-bottom: 2em;">A concept proposal I made to showcase my
+                  <p style="text-align: justify;">A concept proposal I made to showcase my
                     replication works
                     capability. Design is updated in July 2024, to align with current design standards.</p>
                 </div>
               </div>
             </div>
+            <br>
             <div class="banner text-center wow fadeIn" data-wow-delay="150ms">
               <a href="https://i.imgur.com/EfNQBgk.png" class="portfolio-img"><img src="https://i.imgur.com/EfNQBgk.png"
                   class="img-fluid" alt="cover-page"></a>
