--- a/worksbynrfz/ezlink-red.html
+++ b/worksbynrfz/ezlink-red.html
@@ -284,7 +284,7 @@
             <div class="row justify-content-center">
               <div class="col-lg-12">
                 <div class="info justify-content-center">
-                  <p style="text-align: center;">An attempt to redesign the EZ-Link Concession
+                  <p style="text-align: justify;">An attempt to redesign the EZ-Link Concession
                     Cards,
                     based on the current design language of the <a href="https://www.samuel-lim.com/signage-system"
                       class="hyperlink">wayfinding
