--- a/worksbynrfz/ffl.html
+++ b/worksbynrfz/ffl.html
@@ -278,12 +278,13 @@
             <div class="row justify-content-center">
               <div class="col-lg-12">
                 <div class="info justify-content-center">
-                  <p style="text-align: center; padding-bottom: 2em;">A submission for a logo competition based on the
+                  <p style="text-align: justify;">A submission for a logo competition based on the
                       theme
                       "Friends Forever", conducted by ITE College West's School of Electronics and Infocomm Technology.
                 </div>
               </div>
             </div>
+            <br>
             <div class="banner text-center wow fadeIn" data-wow-delay="150ms">
               <a href="https://i.imgur.com/m7XFEWx.png" class="portfolio-img"><img src="https://i.imgur.com/m7XFEWx.png"
                   class="img-fluid" alt="cover-page"></a>
