--- a/worksbynrfz/hydrationreg.html
+++ b/worksbynrfz/hydrationreg.html
@@ -284,11 +284,11 @@
             <div class="row justify-content-center">
               <div class="col-lg-12">
                 <div class="info justify-content-center">
-                  <p style="text-align: center; padding-bottom: 2em;"> A remake of SAF's Hydration Regime Infographic.</p>
+                  <p style="text-align: justify;"> A remake of SAF's Hydration Regime Infographic.</p>
                 </div>
               </div>
             </div>
-
+            <br>
             <div class="banner text-center wow fadeIn" data-wow-delay="150ms">
               <a href="https://i.imgur.com/19W6L4q.png" class="portfolio-img"><img src="https://i.imgur.com/19W6L4q.png"
                   class="img-fluid" alt="cover-page"></a>
