--- a/worksbynrfz/igra1.html
+++ b/worksbynrfz/igra1.html
@@ -284,13 +284,13 @@
             <div class="row justify-content-center">
               <div class="col-lg-12">
                 <div class="info justify-content-center">
-                  <p style="text-align: center; padding-bottom: 2em;"> A submission for an assignment to turn my Resume
+                  <p style="text-align: justify;"> A submission for an assignment to turn my Resume
                     into an
                     Infographic Version.</p>
                 </div>
               </div>
             </div>
-
+            <br>
             <div class="banner text-center wow fadeIn" data-wow-delay="150ms">
               <a href="https://i.imgur.com/IZtl7ID.png" class="portfolio-img"><img src="https://i.imgur.com/IZtl7ID.png"
                   class="img-fluid" alt="cover-page"></a>
