--- a/worksbynrfz/mrt-signage-rep-s1.html
+++ b/worksbynrfz/mrt-signage-rep-s1.html
@@ -284,7 +284,7 @@
             <div class="row justify-content-center">
               <div class="col-lg-12">
                 <div class="info justify-content-center">
-                  <p style="text-align: center;">An attempt to replicate the new signage designs,
+                  <p style="text-align: justify;">An attempt to replicate the new signage designs,
                       as well
                       as to update older signages to the new <a
                         href="https://www.samuel-lim.com/signage-system" class="hyperlink">wayfinding
