--- a/worksbynrfz/myts-app.html
+++ b/worksbynrfz/myts-app.html
@@ -284,7 +284,7 @@
             <div class="row justify-content-center">
               <div class="col-lg-12">
                 <div class="info justify-content-center">
-                  <p style="text-align: center;">An app concept of the redesigned MyTransport.SG App,
+                  <p style="text-align: justify;">An app concept of the redesigned MyTransport.SG App,
                     updated with the current design language from the
                     <a href="https://www.samuel-lim.com/singapore-mrt-signage-system" class="hyperlink">new wayfinding
                       system</a>.
