--- a/worksbynrfz/sit.html
+++ b/worksbynrfz/sit.html
@@ -284,7 +284,7 @@
             <div class="row justify-content-center">
               <div class="col-lg-12">
                 <div class="info justify-content-center">
-                  <p style="text-align: center;"> 3 out of my many ideas and prototypes on how
+                  <p style="text-align: justify;"> 3 out of my many ideas and prototypes on how
                     to enhance
                     store/inventory tracking operations.
                     (Details redacted for privacy)</p>
