2025-11 Cumulative Update for Version 2511 (6.0.1)

--- a/eicw/eicw-4.html
+++ b/eicw/eicw-4.html
@@ -500,7 +500,7 @@
                   </a>
                 </div>
 
-                <iframe width="1280" height="512" src="https://www.youtube.com/embed/5aDZRqKOu2g?si=xkjiFZxgPlGVkNYi"
+                <iframe width="1280" height="512" src="https://www.youtube.com/embed/eHnDn4KbKPg?si=G87h7ori1atFzCs1"
                   title="YouTube video player" frameborder="0"
                   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                   referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
