--- a/eicw/eicw-5.html
+++ b/eicw/eicw-5.html
@@ -550,7 +550,7 @@
                 <div class="column column-pic">
                   <figcaption>
                     <a href="img/ccl6-3.png" id="os" class="portfolio-img ">
-                      <img src="img/ccl6-3.png" id="os-img" class="img-fluid cp-img" alt="os">
+                      <img src="img/ccl6-3.png" id="os-img" class="img-fluid cp-img" alt="os" style="border-radius: 0px;">
                     </a>
                     <p style="text-align: center;">Proposed Design by LTA</p>
                   </figcaption>
@@ -558,7 +558,7 @@
                 <div class="column column-pic">
                   <figcaption>
                     <a href="img/ccl6-2a.png" id="os" class="portfolio-img ">
-                      <img src="img/ccl6-3a.png" id="os-img" class="img-fluid cp-img" alt="os">
+                      <img src="img/ccl6-3a.png" id="os-img" class="img-fluid cp-img" alt="os" style="border-radius: 0px;">
                     </a>
                     <p style="text-align: center;">My Redesigned Version</p>
                   </figcaption>
@@ -865,14 +865,14 @@
                 <div class="column column-pic">
                   <figcaption>
                     <a href="img/ccl6-1.png" id="os" class="portfolio-img ">
-                      <img src="img/ccl6-1.png" id="os-img" class="img-fluid cp-img" alt="os">
+                      <img src="img/ccl6-1.png" id="os-img" class="img-fluid cp-img" alt="os" style="border-radius: 0px;">
                     </a>
                   </figcaption>
                 </div>
                 <div class="column column-pic">
                   <figcaption>
                     <a href="img/ccl6-1a.png" id="os" class="portfolio-img ">
-                      <img src="img/ccl6-1a.png" id="os-img" class="img-fluid cp-img" alt="os">
+                      <img src="img/ccl6-1a.png" id="os-img" class="img-fluid cp-img" alt="os" style="border-radius: 0px;">
                     </a>
                   </figcaption>
                 </div>
@@ -880,7 +880,7 @@
                 <div class="column column-pic">
                   <figcaption>
                     <a href="img/ccl6-5.png" id="os" class="portfolio-img ">
-                      <img src="img/ccl6-5.png" id="os-img" class="img-fluid cp-img" alt="os">
+                      <img src="img/ccl6-5.png" id="os-img" class="img-fluid cp-img" alt="os" style="border-radius: 0px;">
                     </a>
                     <p style="text-align: center;">Proposed Design by LTA</p>
                   </figcaption>
@@ -888,7 +888,7 @@
                 <div class="column column-pic">
                   <figcaption>
                     <a href="img/ccl6-5a.png" id="os" class="portfolio-img ">
-                      <img src="img/ccl6-5a.png" id="os-img" class="img-fluid cp-img" alt="os">
+                      <img src="img/ccl6-5a.png" id="os-img" class="img-fluid cp-img" alt="os" style="border-radius: 0px;">
                     </a>
                     <p style="text-align: center;">My Redesigned Version</p>
                   </figcaption>
@@ -921,8 +921,8 @@
               <div class="row wow fadeIn" data-wow-delay="100ms">
                 <div class="column column-pic">
                   <figcaption>
-                    <a href="img/ccl6-4.png" id="os" class="portfolio-img ">
-                      <img src="img/ccl6-4.png" id="os-img" class="img-fluid cp-img" alt="os">
+                    <a href="img/ccl6-4.png" id="os" class="portfolio-img">
+                      <img src="img/ccl6-4.png" id="os-img" class="img-fluid cp-img" alt="os" style="border-radius: 0px;">
                     </a>
                     <p style="text-align: center;">Proposed Design by LTA</p>
                   </figcaption>
@@ -930,7 +930,7 @@
                 <div class="column column-pic">
                   <figcaption>
                     <a href="img/ccl6-4a.png" id="os" class="portfolio-img ">
-                      <img src="img/ccl6-4a.png" id="os-img" class="img-fluid cp-img" alt="os">
+                      <img src="img/ccl6-4a.png" id="os-img" class="img-fluid cp-img" alt="os" style="border-radius: 0px;">
                     </a>
                     <p style="text-align: center;">My Redesigned Version</p>
                   </figcaption>
@@ -964,7 +964,7 @@
                 <div class="column column-pic">
                   <figcaption>
                     <a href="img/ccl6-2.png" id="os" class="portfolio-img ">
-                      <img src="img/ccl6-2.png" id="os-img" class="img-fluid cp-img" alt="os">
+                      <img src="img/ccl6-2.png" id="os-img" class="img-fluid cp-img" alt="os" style="border-radius: 0px;">
                     </a>
                     <p style="text-align: center;">Proposed Design by LTA</p>
                   </figcaption>
@@ -972,7 +972,7 @@
                 <div class="column column-pic">
                   <figcaption>
                     <a href="img/ccl6-2a.png" id="os" class="portfolio-img ">
-                      <img src="img/ccl6-2a.png" id="os-img" class="img-fluid cp-img" alt="os">
+                      <img src="img/ccl6-2a.png" id="os-img" class="img-fluid cp-img" alt="os" style="border-radius: 0px;">
                     </a>
                     <p style="text-align: center;">My Redesigned Version</p>
                   </figcaption>
