2025-11 Cumulative Update for Version 2511 (6.0.5)

--- a/eicw/eicw-4.html
+++ b/eicw/eicw-4.html
@@ -307,7 +307,7 @@
                 progressively going for a more full-screen approach, where you will tap your card on the screen itself.
               </p>
 
-              <p style="text-align: justify;">While the User Interface for the upcoming Card Readers are not yet known,
+              <p class="no-align">While the User Interface for the upcoming Card Readers are not yet known,
                 these are what I envisioned the designs to be!</p>
 
               <div class="row">
@@ -317,7 +317,7 @@
                     <a href="img-2/bcr-compare-light.png" id="bcr2" class="portfolio-img ">
                       <img src="img-2/bcr-compare-light.png" id="bcr2-img" class="img-fluid cp-img" alt="bcr2">
                     </a>
-                    <p style="text-align: center;">📸: <br>
+                    <p style="text-align: justify;">📸: <br>
                       - <a
                         href="//images.squarespace-cdn.com/content/v1/5bcfc8c07a1fbd730b2ba933/1558377402895-3VI3FNHXOZQWI997KRES/MRT+gate+to+tap.jpg">Current
                         MRT Card Reader</a><br>
@@ -412,7 +412,7 @@
                     <a href="img/staris2-B.png" id="staris2-b" class="portfolio-img ">
                       <img src="img/staris2-B.png" id="staris2-b-img" class="img-fluid cp-img" alt="staris2-b">
                     </a>
-                    <p style="text-align: center;">Current STARiS 2.0 UI, on most of the KSFB/C Trains. <b>Older</b>
+                    <p style="text-align: justify;">Current STARiS 2.0 UI, on most of the KSFB/C Trains. <b>Older</b>
                       Line
                       Diagram Layout.
                     </p>
@@ -425,7 +425,7 @@
                     <a href="img/staris2-C.png" id="staris2-c" class="portfolio-img ">
                       <img src="img/staris2-C.png" id="staris2-c-img" class="img-fluid cp-img" alt="staris2-c">
                     </a>
-                    <p style="text-align: center;">Current STARiS 2.0 UI, on the KSFC Trains. <b>Updated</b> Line
+                    <p style="text-align: justify;">Current STARiS 2.0 UI, on the KSFC Trains. <b>Updated</b> Line
                       Diagram Layout.
                     </p>
                   </figcaption>
@@ -436,7 +436,7 @@
                     <a href="img-2/staris2-D.png" id="staris2-b" class="portfolio-img ">
                       <img src="img-2/staris2-D.png" id="staris2-b-img" class="img-fluid cp-img" alt="staris2-b">
                     </a>
-                    <p style="text-align: center;">Revamped STARiS 2.0 UI, on one of the KSFC Trains. <b>Updated</b>
+                    <p style="text-align: justify;">Revamped STARiS 2.0 UI, on one of the KSFC Trains. <b>Updated</b>
                       Line
                       Diagram Layout and <b>New</b> Next Station Interface
                     </p>
@@ -448,7 +448,7 @@
                     <a href="img-2/staris2-red.png" id="staris2-b" class="portfolio-img ">
                       <img src="img-2/staris2-red.png" id="staris2-b-img" class="img-fluid cp-img" alt="staris2-b">
                     </a>
-                    <p style="text-align: center;">Revamped STARiS 2.0 UI. <b>Proposed Redesign</b>
+                    <p style="text-align: justify;">Revamped STARiS 2.0 UI. <b>Proposed Redesign</b>
                     </p>
                   </figcaption>
                 </div>
@@ -488,7 +488,7 @@
                     <a href="img-2/cddbpori.png" id="cddbpori" class="portfolio-img ">
                       <img src="img-2/cddbpori.png" id="cddbpori-img" class="img-fluid cp-img" alt="cddbpori">
                     </a>
-                    <p style="text-align: center;">Current CDD UI Design on the C801B Trains.
+                    <p style="text-align: justify;">Current CDD UI Design on the C801B Trains.
                     </p>
                   </figcaption>
                 </div>
