--- a/eicw/eicw.html
+++ b/eicw/eicw.html
@@ -371,7 +371,7 @@
 
                             <div class="info justify-content-center text-center" style="padding-top: 3em;">
                                 <h2 style="font-size: 30px; font-weight:bold;">Existing Icon Assets</h2>
-                                <p style="text-align: center;">This section will showcase the existing icon assets
+                                <p style="text-align: justify;">This section will showcase the existing icon assets
                                     currently in use, categorised into different sections.
                                 </p>
                             </div>
